Mon Sep  1 20:08:32 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gtcl.scm (make-tcl-binder): Rewritten to choose bindings
	according to the following priorities:
	1. tcl bindings which are present in override-scheme-list
	2. bindings from the-scm-module
	3. tcl bindings
	This way the gtcl module can occur first in the use-list without
	disabling the scheme interpreter.
	(new-interpreter): New function.

	* gwish.scm: Moved initialization code for the-interpreter to
 	gtcl.scm; Moved name space cleaning code to gtcl.scm and rewrote
 	it; Call `new-interpreter'; Don't :use-module (guile).

Wed Aug 27 11:35:09 1997  Jim Blandy  <jimb@totoro.red-bean.com>

	* Makefile.in: Regenerated, so it uses "tar", not "gtar".

Mon Aug 25 22:00:44 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (object->string, format, error-args->string): New
	procedures.
	(emacs-frame-eval): Reworked.

Mon Aug 25 16:15:55 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* session.scm (apropos-internal): Musn't initialize symbol
	accumulator with a constant pair.  That led to mutation of the
	source!

Sun Aug 24 01:03:10 1997  Mikael Djurfeldt  <mdj@kenneth>

	* session.scm (vector-for-each): Removed.
	(apropos): vector-for-each --> array-for-each.
	(apropos-internal): New function.  Return list of accessible
	symbols matching regexp.

	* debug.scm (frame-number->index): New function.  Convert frame
	number (as displayed in the backtrace) to frame index (to be used
	in stack-ref).

	* emacs.scm (emacs-load): New arguments: interactivep: when
 	non-false, send back results to Emacs; colnum: Column number;
	Use modules (ice-9 debug) and (ice-9 session);
	(no-stack, no-source): New simple-actions;
	(result-to-emacs): New procedure. Sends data to Emacs via the
	result protocol;
	(get-frame-source, emacs-select-frame, emacs-frame-eval,
	emacs-symdoc): New procedures.

Wed Aug 20 13:21:11 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* emacs.scm (emacs-load): Adjust stack narrowing.